Struttura base html e css completata

--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
 </head>
 <body>
     
+    <div class="background">
+        <div class="bg-up"></div>
+        <div class="bg-down"></div>
+    </div>
+
+    <main id="app">
+        <div class="debug container p-fixed">
+
+            <!-- LISTA AMICI -->
+            <section class="debug left">
+                <div class="debug user"></div>
+                <div class="debug bell"></div>
+                <div class="debug search"></div>
+                <div class="debug friends"></div>
+            </section>
+            <!-- /LISTA AMICI -->
+
+            <!-- CHAT ATTIVA -->
+            <section class="debug right">
+                <div class="debug contact"></div>
+                <div class="debug chat"></div>
+                <div class="debug message"></div>
+            </section>
+            <!-- CHAT ATTIVA -->
+
+        </div>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="js/script.js"></script>
