Aggiunte classi per i messaggi di colore e posizione differenti

--- a/index.html
+++ b/index.html
@@ -35,8 +35,29 @@
             <!-- CHAT ATTIVA -->
             <section class="debug right">
                 <div class="debug contact"></div>
-                <div class="debug chat"></div>
-                <div class="debug message"></div>
+                <div class="debug chat">
+
+                    <!-- Esempio di chat -->
+                    <div class="container-msg">
+                        <div class="msg-row sended">
+                            <div class="message sended">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni odit, deleniti repellat earum eligendi sed quia autem doloremque dolorem dignissimos. Consequatur assumenda odit facilis alias obcaecati voluptates sed nihil magni.
+                            </div>
+                        </div>
+                        <div class="msg-row received">
+                            <div class="message received">
+                                Funzionoooo!
+                            </div>
+                        </div>
+                        <div class="msg-row">
+                            <div class="message received">
+                                Yess
+                            </div>
+                    </div>
+                    <!-- /Esempio di chat -->
+
+                </div>
+                <div class="debug send-message"></div>
             </section>
             <!-- CHAT ATTIVA -->
 
