--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Esercizio - Whatsapp responsive(?)</title>
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css' integrity='sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==' crossorigin='anonymous'/>    
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css' integrity='sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==' crossorigin='anonymous'/>
+
+    <!-- Dayjs cdn -->
+    <!-- <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script> -->
     
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css">
@@ -62,10 +65,9 @@
                     <div 
                         class="friend-box"
                         v-for="(user, i) in dataArray"
-                        v-if="user.name.toLowerCase().includes(searching)"
+                        v-if="user.name.toLowerCase().includes(searching.toLowerCase())"
                         @click="changeChat(i)"
                         :class="currentContactIndex == i ? 'active' : ''">
-                        <!-- La ricerca non funziona come dovrebbe. Se inizio a cercare con una lettera maiuscola che non ha corrispettivo fra le maiuscole iniziali di ogni nome, mi da risultato di lettera mancante. -->
                         <div class="friend-image">
                             <img :src="`img/avatar${user.avatar}.jpg`" :alt="user.avatar">
                         </div>
